--- a/Upcoming/Upcoming/Upcoming.csproj
+++ b/Upcoming/Upcoming/Upcoming.csproj
@@ -49,12 +49,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Fonts\Shrikhand-Regular.ttf" />
 	  <None Remove="Resources\Images\ham.png" />
 	  <None Remove="Resources\Images\search.png" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="NewsAPI" Version="0.7.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
